--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -1,3 +1,25 @@
+@article{christensen2021estimating,
+  title={Estimating the stability of psychological dimensions via bootstrap exploratory graph analysis: A Monte Carlo simulation and tutorial},
+  author={Christensen, Alexander P and Golino, Hudson},
+  journal={Psych},
+  volume={3},
+  number={3},
+  pages={479--500},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{murtagh2014ward,
+  title={Ward's hierarchical agglomerative clustering method: which algorithms implement Ward's criterion?},
+  author={Murtagh, Fionn and Legendre, Pierre},
+  journal={Journal of classification},
+  volume={31},
+  number={3},
+  pages={274--295},
+  year={2014},
+  publisher={Springer}
+}
+
 @article{ludecke2021performance,
   title={performance: An R package for assessment, comparison and testing of statistical models},
   author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Waggoner, Philip and Makowski, Dominique},
@@ -864,16 +886,6 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   publisher={American Psychological Association}
 }
 
-@article{golino2017exploratory,
-  title={Exploratory graph analysis: A new approach for estimating the number of dimensions in psychological research},
-  author={Golino, Hudson F and Epskamp, Sacha},
-  journal={PloS one},
-  volume={12},
-  number={6},
-  pages={e0174035},
-  year={2017},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
 
 @article{baer2006using,
   title={Using self-report assessment methods to explore facets of mindfulness},
